# fuzzy_match_repair

./: README.md
patching/: build-jars.xml  build.xml
patching/corpora/: extract_2016_en_es.sh  extract_en_es.sh  extract_es_fr.sh  extract_es_pt.sh  extract_files_2016.py  extract_files_es_pt.py
patching/corpora/dgt-tm2015/: copycommand.sh  extract_en_de.sh
patching/corpora/dgt-tm2016/: extract_es_fr.sh  extract_es_pt.sh
patching/corpora/dgt-tm2017/: extract_en_es.sh  extract_files_en_es.py  extract_files_es_fr.py
patching/corpora/dgt-tm2018/: extract_files.py
patching/feature_scripts/: analyze.py  find_sent_no_patches.py  find_sent_no_patches_compare.py  getpaperinfo.1.py  getpaperinfo.sh  getpaperinfo.tail.sh  john.cfg  oracle_print.py  prepare_for_quest.nof1nof4.sh  prepare_for_quest.parseonly.sh  prepare_for_quest.sh  prepare_for_quest.single.sh  prepare_for_quest.testthirty.sh  prepare_for_quest.testthree.sh  prepare_for_quest.testtwo.sh  prepare_for_quest.training.sh  prepare_mae.py  rounder.py  run_experiments.all_lang.new.sh  run_experiments.new.sh  run_features_breakdown.sh  run_spread_fms.sh  run_two_experiments.sh  version.py
patching/input/: remove_from_existing_tm.py
patching/input/original/: en.omega.orig  en.source.bad  en.source.gz.origfrompaper
patching/input/python/: a.txt  create_mt_file.py  label.txt  m.txt  n.txt
patching/old_scripts/: run_fms.out  run_fms.sh  run_fms_new.out  run_fms_new.sh  run_global_scenario_one.sh  run_global_scenario_one_large.sh  run_global_scenario_one_large_dev.sh  run_patch_op.sh  run_patch_phr_extr.sh  run_patching.out  run_patching.sh  run_patching_features.out.with.features  run_patching_features.out.without.features  run_patching_features.sh  run_patching_features_4_features.out  run_patching_features_excel.sh  run_patching_features_excel_europarl.out  run_patching_features_excel_europarl.sh  run_patching_features_excel_europarl_nofeatures.out  run_patching_features_excel_wer.sh  run_patching_features_excel_wer1.sh  run_patching_features_excel_wer2.sh  run_patching_features_excel_wer4.sh  run_patching_features_excel_werALL.sh  run_patching_features_excel_wer_feat3.sh  run_patching_features_excel_yes_features.out  run_patching_nofeatures_excel_wer.sh  run_patching_wer.out  run_patching_wer.out.orig  run_patching_wer.sh  run_test_fms.sh  run_test_fms_omega.sh  run_wer_alone.sh  test.out
patching/output-bleu/: en_es.mt.apertium  es.omega.test  es_fr.mt.apertium  es_pt.mt.apertium  fr.omega.test  john.txt  multi-bleu.pl  pt.omega.test
patching/output/original/: es.omega.test
patching/patcher_script/: repair.sh
patching/run_global_scenario_files/: run_global_scenario_en_es_60.gz.orig  run_global_scenario_en_es_60.intermediate.dev.wer  run_global_scenario_en_es_60.intermediate.gz.orig  run_global_scenario_en_es_60.test.bbandbothgrounding.wer  run_global_scenario_en_es_60.test.bbandbothgrounding.wer.esplagomis  run_global_scenario_en_es_90.intermediate.train.new  run_global_scenario_en_es_tm_60t.test.out.new  run_global_scenario_es_fr_tm_60t.test.out.new
patching/scripts/: bestpatch.py  find_attempted_patches.py  out  repair.sh  run_create_mt.sh  run_create_tm.sh  run_create_trans_map_from_files.sh  run_experiments.sh  run_get_sigmas_and_sigma_primes.sh  run_global_features.sh  run_global_features_use_params.sh  run_global_scenario.sh  run_global_scenario1.sh  run_global_scenario2.sh  run_global_scenario3.sh  run_global_scenario4.sh  run_global_scenario5.sh  run_global_scenario6.sh  run_global_scenario_measure_mismatches.sh  run_global_scenario_mt.sh  run_global_scenario_mt_with_fms.sh  run_global_scenario_num.sh  run_global_scenario_orig.sh  run_global_scenario_out_of_voc.sh  run_global_scenario_selecT.sh  run_global_scenario_tm.sh  run_spread.sh  run_spread_fms.sh  run_spread_fms_helper.sh  run_spread_indiv.sh  run_test_matching.sh  run_test_wer_two_segments.sh  run_tm_copy.sh  run_tm_get_best.sh  run_tm_get_num_matches_by_fms.delete.sh  run_tm_get_num_matches_by_fms.sh  test.out
patching/scripts/corptest/: en_es.new.source.2000.test
patching/scripts/paperinfo/: create_hypotheses_poc.py  process_hc.sh
patching/translation_map_files/: fasttext.en.pred  translation_map_en-es.new.dev.moses.felipe.ser  translation_map_en-es.new.dev.ser
software/apertium-eng-de-09-20-2018/vislcg3/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cg3.pc  cmake_install.cmake  install_manifest.txt
software/apertium.11.22.2017/apertium/: config.status
software/apertium.11.22.2017/apertium-en-es/: apertium-en-es.en-lextor.dix
software/apertium.11.22.2017/apertium-es-pt/: AUTHORS  Makefile  apertium-es-pt.post-pt.dix  apertium-es-pt.pt.tsx  configure.ac  pt-es-unsupervised.make  pt-es.prob
software/apertium.11.22.2017/apertium-fr-es/: Makefile.am  Makefile.in  README  aclocal.m4  apertium-fr-es.es-fr.eco.lrx  apertium-fr-es.es-fr.t2x  apertium-fr-es.es.acx  apertium-fr-es.fr-es.dix  config  configure.ac  es-fr-supervised.make
software/apertium.11.22.2017/apertium-fr-es/.deps/: common-fr-es.dix  eco-fr.dix
software/apertium.11.22.2017/apertium-fr-es/dev/: testvoc.sh
software/apertium.11.22.2017/apertium-fr-es/modes/: es-fr-anmor.mode  es-fr-chunker.mode  es-fr-generador.mode  es-fr-postchunk.mode  fr-es-pretransfer.mode  fr-es.mode
software/apertium.11.22.2017/apertium-lex-tools/: Makefile  yasmet
software/apertium.11.22.2017/lttoolbox/: configure
software/apertium.bak/apertium-en-es/: Makefile  aclocal.m4  config.status  configure  es-en.mode
software/apertium.bak/apertium-es-pt/: filterrules.sh  pt.dix
software/apertium.bak/apertium-fr-es/: apertium-fr-es.fr.metadix  apertium-fr-es.fr.tsx  config.status  es-fr-unsupervised.make  es-fr.prob  fr-es-supervised.make  modes.xml
software/apertium/apertium-es-pt/: Makefile.am  Makefile.in  config  es-pt.dix  es-pt.t1x  es-pt_BR.dix  es-pt_BR.t1x  post-pt.dix  post-pt_BR.dix
software/apertium/apertium-es-pt/modes/: es-pt_BR.mode  pt-es-biltrans.mode  pt-es-morph.mode  pt-es.mode
software/moses/: out  test.one
software/quest/: run.out  run.sh
(+1422 files in other folders)
